<resources>
    <string name="app_name">TimeCounter</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Diese App hilft dir den Überblick über deine Arbeitszeit zu behalten.</string>
    <string name="time_count">Aktueller Zeitsaldo:</string>
    <string name="start_time">Anfangszeit:</string>
    <string name="end_time">Endzeit:</string>
    <string name="finish_time">Feierabend:</string>
    <string name="last_finish_time">Verschwinde:</string>
    <string name="btnSubmitTime">Zeit buchen</string>
</resources>
